Stop asset browse button from covering last few chars of url.

--- a/client/css/tilemill.css
+++ b/client/css/tilemill.css
@@ -1249,6 +1249,8 @@ ul.form > li a.assets {
   -webkit-border-radius:0px;
   }
 
+ul.form > li input#file { padding-right:20px; }
+
 ul.assets { padding:10px; }
 
 ul.assets li {
